--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,7 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
-openai==1.54.5
-google-generativeai==0.3.0
+google-generativeai==0.7.0
 pypdf==3.17.0
 python-docx==1.1.0
 pydantic==2.5.0
@@ -20,3 +19,11 @@ passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
 python-multipart==0.0.6
 pydantic[email]
+python-decouple==3.8
+aiosmtplib==3.0.1
+email-validator==2.1.0
+redis==5.0.1
+cloudinary==1.36.0
+requests==2.31.0
+python-multipart==0.0.6
+openai>=1.0.0
