--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@webcontainer/api": "^1.6.1",
+    "axios": "1.7.9",
+    "jszip": "^3.10.1",
     "next": "16.0.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "axios": "1.7.9"
+    "react-diff-view": "^3.3.2",
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
